--- a/src/app/components/user-pages/landing/landing.component.html
+++ b/src/app/components/user-pages/landing/landing.component.html
@@ -1,241 +1,3 @@
-<aside>
-    <div class="channels">
-        <h3>Followed Channels</h3>
-
-        <div class="followed">
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="Bahroo"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">AdmiralBahroo</p>
-                    <div class="info">
-                        <span class="game">Borderlands 3</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            4.3K</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1464235173750-ae45ddb17e10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="KarQ"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">KarQ</p>
-                    <div class="info">
-                        <span class="game">Overwatch</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            203</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1506919258185-6078bba55d2a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="aDrive"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">aDrive</p>
-                    <div class="info">
-                        <span class="game">Pokemon Go</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            200</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="EasyAllies"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">EasyAllies</p>
-                    <div class="info">
-                        <span class="game">Monster Hunter World</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            188</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1506956191951-7a88da4435e5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="Cuppcaake"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">Cuppcaake</p>
-                    <div class="info">
-                        <span class="game">Overwatch</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            154</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1530268729831-4b0b9e170218?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="moistcr1tikal"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">moistcr1tikal</p>
-                    <div class="info">
-                        <span class="game">Call of Duty</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            110</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1496345875659-11f7dd282d1d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="CryoSneasel"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">CryoSneasel</p>
-                    <div class="info">
-                        <span class="game">Overwatch</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            101</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1495078065017-564723e7e3e7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="DanielFenrir"
-                        class="followed-img offline"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">DanielFenrir</p>
-                    <div class="info">
-                        <span class="game">8 Videos</span>
-                        <span class="viewers">Offline</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <a href="#" class="show-link">Show More</a>
-        <h3 class="recommended">Recommended Channels</h3>
-
-        <div class="recommended-channels">
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1482235225574-c37692835cf3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="Valkia"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">Valkia</p>
-                    <div class="info">
-                        <span class="game">Call of Cthulhu</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            604</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1492633423870-43d1cd2775eb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="LarihMage"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">LarihMage</p>
-                    <div class="info">
-                        <span class="game">Borderlands 3</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            981</span
-                        >
-                    </div>
-                </div>
-            </div>
-
-            <div class="channel">
-                <div class="img-cropper">
-                    <img
-                        src="https://images.unsplash.com/photo-1515486191131-efd6be9f711f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="Drth7"
-                        class="followed-img"
-                    />
-                </div>
-                <div class="info-container">
-                    <p class="name">Drth7</p>
-                    <div class="info">
-                        <span class="game">Bayonetta</span>
-                        <span class="viewers"
-                            ><div class="live-dot"></div>
-                            14,440</span
-                        >
-                    </div>
-                </div>
-            </div>
-        </div>
-        <a href="#" class="show-link">Show More</a>
-    </div>
-    <div class="search-section">
-        <div class="aside-search">
-            <button type="submit" disabled class="search-icon">
-                <i class="fas fa-search"></i>
-            </button>
-            <input type="text" placeholder="Search to Add Friends" />
-        </div>
-    </div>
-</aside>
-
 <div class="main-content">
     <div class="content">
         <section id="featured">
@@ -274,11 +36,7 @@
             </div>
             <div class="left1">
                 <div class="featured-content">
-                    <img
-                        src="https://www.gamehackstudios.com/wp-content/uploads/2014/11/escape-dead-island-full-PC-game-download-gameplay-image.jpg"
-                        alt="Gameplay"
-                        class="featured-gameplay"
-                    />
+                    <i class="bi bi-chevron-left"></i>
                     <img
                         src="https://images.unsplash.com/photo-1450609283058-0ec52fa7eac4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                         alt="Channel"
@@ -316,11 +74,7 @@
             </div>
             <div class="right1">
                 <div class="featured-content">
-                    <img
-                        src="https://www.gamehackstudios.com/wp-content/uploads/2014/11/escape-dead-island-full-PC-game-download-gameplay-image.jpg"
-                        alt="Gameplay"
-                        class="featured-gameplay"
-                    />
+                    <i class="bi bi-chevron-right"></i>
                     <img
                         src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                         alt="Channel"
@@ -491,190 +245,5 @@
                 Show More <i class="fas fa-chevron-down"></i>
             </div>
         </div>
-        <h2>Recommended <span class="highlight">categories</span></h2>
-        <section class="categories">
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/Overwatch-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">Overwatch</p>
-                        <p class="live-game">11.6K viewers</p>
-                        <span class="live-lang">FPS</span>
-                        <span class="live-lang">Shooter</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/Borderlands%203-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">Borderlands 3</p>
-                        <p class="live-game">7.2K viewers</p>
-                        <span class="live-lang">FPS</span>
-                        <span class="live-lang">RPG</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/Retro-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">Retro</p>
-                        <p class="live-game">2K viewers</p>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/Devil%20May%20Cry%205-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">Devil May Cry 5</p>
-                        <p class="live-game">43 viewers</p>
-                        <span class="live-lang">Action</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/The%20Legend%20of%20Zelda:%20Link%27s%20Awakening-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">The Legend of...</p>
-                        <p class="live-game">1.9K viewers</p>
-                        <span class="live-lang">Action</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/World%20of%20Warcraft-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">World of Warcraft</p>
-                        <p class="live-game">69.9K viewers</p>
-                        <span class="live-lang">MMORPG</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/Final%20Fantasy%20VII-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">Final Fantasy VII</p>
-                        <p class="live-game">52 viewers</p>
-                        <span class="live-lang">RPG</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/Minecraft-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">Minecraft</p>
-                        <p class="live-game">15.6K viewers</p>
-                        <span class="live-lang">Adventure</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/Apex%20Legends-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">Apex Legends</p>
-                        <p class="live-game">303K viewers</p>
-                        <span class="live-lang">FPS</span>
-                        <span class="live-lang">Shooter</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="category">
-                <img
-                    src="https://static-cdn.jtvnw.net/ttv-boxart/Just%20Chatting-188x250.jpg"
-                    alt="Game"
-                />
-                <div class="live-info">
-                    <div class="live-text">
-                        <p class="live-title">Just Chatting</p>
-                        <p class="live-game">60.9K viewers</p>
-                        <span class="live-lang">IRL</span>
-                    </div>
-                    <div class="live-dots">
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                        <div class="rec-live-dot"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </div>
 </div>
