--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,9 +15,9 @@ $gutter: 1rem; //for primeflex grid system
         border-radius: 7px;
         height: 40px !important;
     }
-    input {
-        border: solid 1px #fff !important;
-    }
+    // input {
+    //     border: solid 1px #fff !important;
+    // }
     .p-password > .p-inputtext {
         border: none !important;
     }
