--- a/src/app/components/user-pages/landing/landing.component.less
+++ b/src/app/components/user-pages/landing/landing.component.less
@@ -1,155 +1,8 @@
-/*
-  Follower Background: #212126
-  Twtich Purple: #BF94FF
-  Twitch Red: #e21212
-  Nav Bar: #18181b
-  Asside Search: #424246
-*/
-
-html {
-    font-family: "Roboto", sans-serif;
-    background: black;
-    color: white;
-    overflow: hidden;
-}
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #18181b;
-    height: 50px;
-    padding: 0 10px;
-}
-a,
-i,
-.logo {
-    color: white;
-    text-decoration: none;
-}
-.logo {
-    height: 30px;
-    width: 30px;
-}
-nav {
-    display: flex;
-    align-items: center;
-}
-nav a {
-    margin-left: 2px;
-    display: inline-block;
-    text-align: center;
-    width: 100px;
-    padding: 15px 0 15px;
-    font-weight: 300;
-}
-.dots {
-    display: flex;
-    margin-left: 2px;
-}
-.dot {
-    height: 4px;
-    width: 4px;
-    background: white;
-    border-radius: 50%;
-    margin-left: 2px;
-}
-
-.active {
-    border-bottom: solid 3px #bf94ff;
-    color: #bf94ff;
-}
-.bits {
-    font-weight: 300;
-    font-size: 0.8rem;
-    border: solid 1px white;
-    border-radius: 5px;
-    padding: 5px 8px;
-}
-.bits i {
-    padding-right: 10px;
-}
-.search {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    right: 100px;
-}
-.search-icon {
-    background: white;
-    height: 25px;
-    border: none;
-    outline: none;
-    border-radius: 5px 0 0 5px;
-}
-.search-icon i {
-    color: #bf94ff;
-}
-input {
-    width: 300px;
-    height: 25px;
-    border-radius: 0 5px 5px 0;
-    padding: 0 10px;
-    outline: none;
-    border: none;
-}
-.right-menu {
-    display: flex;
-    align-items: center;
-}
-.rm {
-    margin-left: 15px;
-}
-.profile {
-    position: relative;
-}
-.status {
-    width: 8px;
-    height: 8px;
-    background: lightgreen;
-    border-radius: 2px;
-    position: absolute;
-    right: 5px;
-    bottom: -2px;
-}
-
-aside {
-    width: 250px;
-    background: #212126;
-    color: rgba(255, 255, 255, 0.8);
-    height: 95vh;
-    padding: 15px 10px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    float: left;
-}
 .main-content {
-    width: calc(100vw - 300px);
     height: auto;
     float: right;
 }
-hr {
-    margin: 0 5px;
-    border: none;
-    height: 1px;
-    color: #252328;
-    background-color: #252328;
-}
-.search-section hr {
-    margin: 0 0 10px 0;
-}
-aside h3 {
-    text-transform: uppercase;
-    padding-bottom: 15px;
-    font-size: 0.9rem;
-    font-weight: bold;
-}
-.channel {
-    display: flex;
-    margin: 10px 0;
-    align-items: center;
-}
+
 .img-cropper {
     width: 30px;
     height: 30px;
@@ -164,15 +17,7 @@ aside h3 {
     margin: 0 auto;
     height: 100%;
 }
-.info-container {
-    display: block;
-}
-.info {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 5px;
-    width: 180px;
-}
+
 .live-dot {
     display: inline-block;
     height: 8px;
@@ -197,26 +42,6 @@ aside h3 {
 .recommended {
     margin-top: 30px;
 }
-.aside-search {
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
-}
-.aside-search input {
-    width: 200px;
-    height: 35px;
-    background-color: #424246;
-    color: white;
-}
-.aside-search button {
-    background: #424246;
-    height: 35px;
-}
-.aside-search button i {
-    color: white;
-    font-size: 0.7rem;
-}
 
 .main-content .content h2 {
     font-weight: 300;
@@ -227,7 +52,7 @@ aside h3 {
 }
 .content {
     width: 99%;
-    margin: 0 auto;
+    margin: 10px auto;
 }
 #live-channels {
     display: flex;
@@ -366,10 +191,10 @@ aside h3 {
     bottom: 10px;
 }
 #featured {
+    margin: auto;
     position: relative;
     margin: 20px auto;
     height: 300px;
-    transform: translateX(100px);
 }
 .main {
     display: flex;
@@ -470,4 +295,9 @@ aside h3 {
 .right1 {
     transform: translate(200px, -50%);
     z-index: 3;
+}
+
+.thumbnail {
+    height: 160px;
+    width: 300px;
 }
