--- a/src/app/components/user-pages/merchant-request/merchant-request.component.scss
+++ b/src/app/components/user-pages/merchant-request/merchant-request.component.scss
@@ -3,7 +3,6 @@
     margin: 0;
 }
 #form-container {
-    max-width: 600px;
     width: 100%;
 }
 
@@ -21,6 +20,12 @@
 
     .p-dropdown.p-component {
         height: 36.6px !important;
+    }
+
+    .p-dropdown .p-dropdown-label {
+        height: 100% !important;
+        display: flex;
+        align-items: center;
     }
 
     .p-fileupload {
@@ -43,29 +48,43 @@
 }
 
 .avatar {
-    span {
-        background-color: #bababa;
+    margin-bottom: 2rem;
+    .img-des {
+        font-size: 12px;
+        color: #6c757d;
     }
 }
 
-input[type="file"] {
-    display: none;
-}
+// input[type="file"] {
+//     display: none;
+// }
 
 .custom-file-upload {
-    height: 180px;
-    width: 180px;
+    height: 120px;
+    width: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: none;
-    border-radius: 10px;
     cursor: pointer;
+    border-radius: 12px;
+
     img {
-        border-radius: 10px;
-        height: 180px;
+        border-radius: 12px;
+        height: 100%;
         width: 180px;
-        object-fit: fill;
+        object-fit: contain;
+    }
+    &.cover {
+        height: 120px;
+        width: 320px;
+        object-fit: cover;
+
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: contain;
+        }
     }
 }
 
