--- a/src/app/components/shared/add product/add-product.component.html
+++ b/src/app/components/shared/add product/add-product.component.html
@@ -108,6 +108,53 @@
                             </p-multiSelect>
                         </div>
                     </span>
+
+                    <span class="p-float-label col-11 mb-0">
+                        <h6 class="addressLabel ps-0">Package Size</h6>
+                        <div></div>
+                        <div class="row px-2">
+                            <div class="col-6 p-1">
+                                <p class="mb-1">Width</p>
+                                <input
+                                    type="text"
+                                    pInputText
+                                    class="w-full"
+                                    placeholder="Textbox 1"
+                                />
+                            </div>
+
+                            <div class="col-6 p-1">
+                                <p class="mb-1">Title</p>
+                                <input
+                                    type="text"
+                                    pInputText
+                                    class="w-full"
+                                    placeholder="Textbox 2"
+                                />
+                            </div>
+                        </div>
+                        <div class="row px-2">
+                            <div class="col-6 p-1">
+                                <p class="mb-1">Title</p>
+                                <input
+                                    type="text"
+                                    pInputText
+                                    class="w-full"
+                                    placeholder="Textbox 3"
+                                />
+                            </div>
+
+                            <div class="col-6 p-1">
+                                <p class="mb-1">Title</p>
+                                <input
+                                    type="text"
+                                    pInputText
+                                    class="w-full"
+                                    placeholder="Textbox 4"
+                                />
+                            </div>
+                        </div>
+                    </span>
                     <span class="p-float-label col-11">
                         <h6 class="addressLabel ps-0">Price</h6>
                         <p-inputNumber
