--- a/src/app/components/user-pages/cart/cart.component.html
+++ b/src/app/components/user-pages/cart/cart.component.html
@@ -2,183 +2,75 @@
     <h3 class="col-12 cart-header mb-0">My cart</h3>
     <div class="col-12 xl:col-8">
         <div class="card px-6 py-6">
-            <div *ngFor="let item of cart">
-                <div class="cart-item">
-                    <span
-                        style="min-width: 10rem"
-                        class="d-flex align-items-center flex-wrap gap-4"
-                    >
-                        <p-checkbox
-                            [(ngModel)]="item.isSelected"
-                            [binary]="true"
-                            (onChange)="selectItem(item)"
-                        ></p-checkbox>
-                        <img
-                            [src]="item?.image"
-                            width="100"
-                            height="100"
-                            class="shadow-4 rounded-3"
-                        />
-                        <span class="d-flex flex-column">
-                            <h5 class="mb-0" style="width: fit-content">
-                                {{ item.name }}
-                            </h5>
-                            <small style="font-size: 12px">{{
-                                item.listAttributeName.join(", ")
-                            }}</small>
-                            <span style="width: 14%; min-width: 8rem">
-                                {{ item.unitPrice | currency : "VND" }}
+            <div *ngFor="let shop of cart">
+                <div class="d-flex align-items-center gap-4 my-4">
+                    <p-checkbox
+                        [binary]="true"
+                        (onChange)="selectItem(item)"
+                    ></p-checkbox>
+                    <h5 class="my-auto">{{ shop.merchantName }}</h5>
+                </div>
+                <div *ngFor="let item of shop.cartItemDTOList">
+                    <div class="cart-item">
+                        <span
+                            style="min-width: 10rem"
+                            class="d-flex align-items-center flex-wrap gap-4"
+                        >
+                            <p-checkbox
+                                [(ngModel)]="item.isSelected"
+                                [binary]="true"
+                                (onChange)="selectItem(item)"
+                            ></p-checkbox>
+                            <img
+                                [src]="item?.image"
+                                width="100"
+                                height="100"
+                                class="shadow-4 rounded-3"
+                            />
+                            <span
+                                class="d-flex flex-column"
+                                style="max-width: 50%"
+                            >
+                                <h5 class="mb-0">
+                                    {{ item.name }}
+                                </h5>
+                                <small style="font-size: 12px">{{
+                                    item.listAttributeName.join(", ")
+                                }}</small>
+                                <span style="width: 14%; min-width: 8rem">
+                                    {{ item.unitPrice | currency : "VND" }}
+                                </span>
                             </span>
                         </span>
-                    </span>
 
-                    <span style="width: 14%; min-width: 10rem" class="num-item">
-                        <app-quantity
-                            [quantity]="item.quantity"
-                            [min]="1"
-                            [max]="item.stockAmount"
-                            (onQuantity)="onChangeQty(item, $event)"
-                        ></app-quantity>
-                        <button
-                            pButton
-                            pRipple
-                            icon="pi pi-trash"
-                            class="p-button-rounded p-button-danger p-button-text"
-                            (click)="$event.stopPropagation(); removeItem(item)"
-                        ></button>
-                    </span>
-                    <!-- <span style="width: 14%; min-width: 10rem">
+                        <span
+                            style="width: 14%; min-width: 10rem"
+                            class="num-item"
+                        >
+                            <app-quantity
+                                [quantity]="item.quantity"
+                                [min]="1"
+                                [max]="item.stockAmount"
+                                (onQuantity)="onChangeQty(item, $event)"
+                            ></app-quantity>
+                            <button
+                                pButton
+                                pRipple
+                                icon="pi pi-trash"
+                                class="p-button-rounded p-button-danger p-button-text"
+                                (click)="
+                                    $event.stopPropagation(); removeItem(item)
+                                "
+                            ></button>
+                        </span>
+                        <!-- <span style="width: 14%; min-width: 10rem">
                     {{ item.totalItemPrice | currency : "VND" }}
                 </span> -->
+                    </div>
+                    <p-divider></p-divider>
                 </div>
-                <p-divider></p-divider>
             </div>
-            <!-- <p-table
-        #dt
-        [value]="cart"
-        responsiveLayout="scroll"
-        [(selection)]="selecteditems"
-        dataKey="cartItemId"
-        [rows]="8"
-        [globalFilterFields]="[
-          'name',
-          'price',
-          'brand.name',
-          'subCategory.category.name'
-        ]"
-        [paginator]="true"
-        [showCurrentPageReport]="true"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowHover]="true"
-      >
-        <ng-template pTemplate="caption">
-          <div class="d-flex justify-content-end">
-            <span class="block p-input-icon-left">
-              <i class="pi pi-search"></i>
-              <input
-                pInputText
-                type="text"
-                (input)="onGlobalFilter(dt, $event)"
-                placeholder="Search..."
-                class="w-full sm:w-auto"
-              />
-            </span>
-          </div>
-        </ng-template>
-        <ng-template pTemplate="header">
-          <tr>
-            <th style="width: 3rem">
-              <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-            </th>
-
-            <th>item</th>
-            <th pSortableColumn="unitPrice">
-              Price <p-sortIcon field="unitPrice"></p-sortIcon>
-            </th>
-            <th pSortableColumn="quantity">
-              Quantity <p-sortIcon field="quantity"></p-sortIcon>
-            </th>
-            <th pSortableColumn="totalItemPrice">
-              Total <p-sortIcon field="totalItemPrice"></p-sortIcon>
-            </th>
-
-            <th width="80px"></th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-item>
-          <tr>
-            <span style="width: 3rem">
-              <p-tableCheckbox
-                [value]="item"
-                (click)="selectItem(item)"
-              ></p-tableCheckbox>
-            </span>
-
-            <span style="min-width: 10rem" class="d-flex align-items-center">
-              <span class="p-column-title">Name</span>
-              <img [src]="item?.image" width="100" class="shadow-4" />
-              <span class="d-flex flex-column ms-4">
-                <h5 class="mb-0" style="width: fit-content">
-                  {{ item.name }}
-                </h5>
-                <small style="font-size: 12px">{{
-                  item.listAttributeName.join(", ")
-                }}</small>
-              </span>
-            </span>
-
-            <span style="width: 14%; min-width: 8rem">
-              <span class="p-column-title">Price</span>
-              {{ item.unitPrice | currency : "VND" }}
-            </span>
-            <span style="width: 14%; min-width: 10rem" class="num-item">
-              <span class="p-column-title">Quantity</span>
-              <p-inputNumber
-                [(ngModel)]="item.quantity"
-                [showButtons]="true"
-                buttonLayout="horizontal"
-                inputId="horizontal"
-                spinnerMode="horizontal"
-                [step]="1"
-                incrementButtonIcon="pi pi-plus"
-                decrementButtonIcon="pi pi-minus"
-                [min]="1"
-                [max]="item.stockAmount"
-                (onInput)="onChangeQty(item, $event.value)"
-              ></p-inputNumber>
-            </span>
-            <span style="width: 14%; min-width: 10rem">
-              <span class="p-column-title">Total</span>
-              {{ item.totalItemPrice | currency : "VND" }}
-            </span>
-
-            <span>
-              <div class="flex">
-                <button
-                  pButton
-                  pRipple
-                  icon="pi pi-trash"
-                  class="p-button-rounded p-button-warning"
-                  (click)="$event.stopPropagation(); removeItem(item)"
-                ></button>
-              </div>
-            </span>
-          </tr>
-        </ng-template>
-      </p-table> -->
         </div>
-
-        <!-- <div class="me-4 mb-2" style="z-index: 100; opacity: 1">
-            <div class="d-flex justify-content-end">
-                <button
-                    [disabled]="selecteditems.length === 0"
-                    class="btn btn-primary"
-                    (click)="onCheckOut()"
-                >
-                    Check out
-                </button>
-            </div>
-        </div> -->
     </div>
     <div class="col-12 xl:col-4">
         <div class="card">
