--- a/src/app/components/user-pages/shop-view/shop-view.component.html
+++ b/src/app/components/user-pages/shop-view/shop-view.component.html
@@ -26,36 +26,20 @@
                         [(selection)]="selectedCategory"
                     ></p-tree> -->
 
-                    <div
-                        *ngFor="let cate of listCate"
-                        class="field-checkbox p-1 d-flex align-items-center"
-                    >
-                        <p-radioButton
-                            name="group"
-                            [value]="cate.categoryId"
-                            [inputId]="cate.categoryId"
-                            [(ngModel)]="selectedCate"
-                            (onClick)="onCheckboxCateChange($event)"
-                        ></p-radioButton>
+                    <div *ngFor="let cate of listCate" class="field-checkbox p-1 d-flex align-items-center">
+                        <p-radioButton name="group" [value]="cate.categoryId" [inputId]="cate.categoryId"
+                            [(ngModel)]="selectedCate"></p-radioButton>
                         <label [for]="cate.categoryId">{{
                             cate.name || "Unknown"
-                        }}</label>
+                            }}</label>
                     </div>
                 </div>
                 <p-divider></p-divider>
                 <div class="brand-type w-100 p-2">
                     <h5>Brand</h5>
-                    <div
-                        *ngFor="let brand of listBrand"
-                        class="field-checkbox p-1"
-                    >
-                        <p-radioButton
-                            name="group"
-                            [value]="brand.brandId"
-                            [inputId]="brand.brandId"
-                            [(ngModel)]="selectedBrand"
-                            (onClick)="onCheckboxBrandChange($event)"
-                        ></p-radioButton>
+                    <div *ngFor="let brand of listBrand" class="field-checkbox p-1">
+                        <p-radioButton name="group" [value]="brand.brandId" [inputId]="brand.brandId"
+                            [(ngModel)]="selectedBrand"></p-radioButton>
                         <label [for]="brand.brandId">{{ brand.name }}</label>
                     </div>
                 </div>
@@ -63,36 +47,29 @@
                 <p-divider></p-divider>
                 <div class="cate-type w-100 p-2">
                     <h5>Price</h5>
-                    <p-slider
-                        [(ngModel)]="priceRange"
-                        [range]="true"
-                        min="0"
-                        max="50000000"
-                        [step]="1000"
-                        (onChange)="onPriceChange()"
-                    ></p-slider>
+                    <p-slider [(ngModel)]="priceRange" [range]="true" min="0" max="50000000" [step]="1000"
+                        (onChange)="onPriceChange()"></p-slider>
                     <div class="d-flex justify-content-between">
                         <p>{{ priceRange[0] | number : "1.0-0" }}</p>
                         -
                         <p>{{ priceRange[1] | number : "1.0-0" }}</p>
                     </div>
                 </div>
+                <div class="d-flex justify-content-center">
+
+                    <button class="btn btn-primary w-fit px-4 m-auto" (click)="applyFilter()">
+                        Apply Filter
+                    </button>
+                </div>
             </div>
         </div>
     </div>
     <div class="shopView-list col-10">
         <div *ngIf="!isLoading; else loading" class="w-100 shopView-list">
-            <app-product-card
-                *ngFor="let product of products"
-                [product]="product"
-                class="product"
-            ></app-product-card>
+            <app-product-card *ngFor="let product of products" [product]="product" class="product"></app-product-card>
         </div>
-        <ng-template #loading
-            ><app-product-card
-                *ngFor="let _ of [].constructor(20)"
-                [isLoading]="true"
-            ></app-product-card>
+        <ng-template #loading><app-product-card *ngFor="let _ of [].constructor(20)"
+                [isLoading]="true"></app-product-card>
         </ng-template>
     </div>
 </div>
